barebones html template, disable audio (WSL)

--- a/engine_and_web/Makefile
+++ b/engine_and_web/Makefile
@@ -26,7 +26,7 @@ $(OBJ_DIR)/%.o: %.c
 	@# All object files will be placed on a special, isolated directory
 	@mkdir -p $(dir $@)
 
-	$(CC) -c $< -o $@
+	$(CC) -D NO_AUDIO -c $< -o $@
 
 clean:
 	rm -rf $(OBJ_DIR)
